[package]
name = "newsfeed"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "newsfeed"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8.1"
tower = "0.5.2"
tokio-postgres = "0.7.12"
axum-macros = "0.5.0"
serde = { version = "1.0.217", features = ["derive"] }
